# chugins

./: .gitignore
Binaural/: Binaural.cpp  README.md  binaural-example.ck  binaural-ui.ck  imgui.ini
Binaural/HRTF_Process/: HRTF_Process.py
ByteBeat/: ByteBeat.cpp  ByteBeat.vcxproj  README  bb.ck  bit_shader.wgsl  imgui.ini  makefile  makefile.win  vis.ck  viznut-visualizer.c
PureDOOM/: PureDOOM-test.ck  PureDOOM.cpp  PureDOOM.vcxproj  PureDOOM_impl.c  build.sh  imgui.ini  makefile  makefile.win
Whisper/: CMakeLists.txt  README.md  Whisper-test.ck  imgui.ini  stream.cpp  tongue-twister.ck  whisper_chugin.cpp
Whisper/whisper_cpp/: CMakeLists.txt
Whisper/whisper_cpp/ggml/cmake/: common.cmake
chuck/include/: chugin.h
pl_synth/: example.c  frank.h  impl.c  makefile  makefile.win  pl_synth-test.ck  pl_synth.cpp  pl_synth.h  quake-remake.h
